Fix display of classification results in reprot

--- a/inst/pavian-report.Rmd
+++ b/inst/pavian-report.Rmd
@@ -121,7 +121,7 @@ sel_protists = grepl("d_Eukaryota",tax_data[,"taxLineage"]) & !sel_fungi &!grepl
 my_df <- data.frame(Name=tax_data$name,Max=apply(cladeReads,1,max,na.rm=TRUE),cladeReads,Lineage=pavian:::beautify_taxLineage(tax_data$taxLineage), stringsAsFactors = FALSE)
 my_dt <- function(sel) {
   selw <- which(sel)
-  max_order <- order(my_df$Max, decreasing = TRUE)
+  max_order <- order(my_df[sel,"Max"], decreasing = TRUE)
   if (sum(sel) > 100) {
     selw <- selw[max_order[1:100]]
     h = sprintf("Showing %s of %s species.", 100, sum(sel))
