--- a/vignettes/pavian-bibliography.bib
+++ b/vignettes/pavian-bibliography.bib
@@ -703,4 +703,15 @@
   timestamp = {2016.11.11},
 }
 
+@article{FBreitwieser_SSalzberg2018-GB,
+  title={KrakenUniq: confident and fast metagenomics classification using unique k-mer counts},
+  author={Breitwieser, FP and Baker, DN and Salzberg, Steven L},
+  journal={Genome Biology},
+  volume={19},
+  number={1},
+  pages={198},
+  year={2018},
+  publisher={BioMed Central}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
